--- a/recherche.html
+++ b/recherche.html
@@ -119,7 +119,7 @@
                                     <a href="index.html" class="nav-link">LE CENTRE</a>
                                 </div>
                                 <div class="nav-item">
-                                    <a href="analyse.html" class="nav-link active">ANALYSE</a>
+                                    <a href="analyse.html" class="nav-link">ANALYSE</a>
                                 </div>
                                 <div class="nav-item">
                                     <a href="sante.html" class="nav-link">SANTE PUBLIQUE</a>
@@ -128,7 +128,7 @@
                                     <a href="vaccination.html" class="nav-link">VACCINATIONS</a>
                                 </div>
                                 <div class="nav-item">
-                                    <a href="recherche.html" class="nav-link">RECHERCHE</a>
+                                    <a href="recherche.html" class="nav-link active">RECHERCHE</a>
                                 </div>
                                 <div class="nav-item">
                                     <a href="formation.html" class="nav-link">FORMATIONS</a>
@@ -150,11 +150,11 @@
         <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/imgs/caroussel1.png);">
             <div class="container-fluid page-header-inner py-5">
                 <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Les services d'analyse</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Recherche</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Analyse</li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Recherche</li>
                         </ol>
                     </nav>
                 </div>
@@ -167,210 +167,29 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title text-center text-primary text-uppercase"> - </h6>
-                    <h1 class="mb-5">Présentation<span class="text-primary text-uppercase"></span></h1>
+                    <h1 class="mb-5">Recherche<span class="text-primary text-uppercase"></span></h1>
                 </div>
                 <div class="row g-4">
-                    <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <img class="img-fluid" src="img/imgs/CPC-056.jpg" alt="">
-                    </div>
-                    <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <!-- <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    </div> -->
+                    <div class="col-lg-12 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
 
                         <div class="">
                             <h6 class="section-title text-start text-dark text-uppercase mb-3"></h6>
                             <!-- <h1 class="text-dark mb-4">....</h1> -->
                             <p class="text-dark mb-4" style="text-align: justify;">
-                                Il est laboratoire national de référence pour 28 pathologies. Un service Hygiène et
-                                Environnement propose le contrôle microbiologique et physico-chimique des eaux et des
-                                aliments pour les industries, l’hôtellerie et la restauration, les administrations,
-                                diverses institutions et les particuliers.
+                                Les infections respiratoires, la tuberculose, et le paludisme. Il collabore avec de
+                                nombreuses institutions nationales et internationales. Les nombre de ses publications
+                                (notamment dans de prestigieuses revues scientifiques), et de ses communications orales
+                                dans des congrès internationaux attestent de la qualité de ses travaux.
                             </p>
                         </div>
                     </div>
+                    <!-- <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    </div> -->
                 </div>
             </div>
         </div>
-
-        <!-- Room Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title text-center text-primary text-uppercase"></h6>
-                    <h1 class="mb-5">Analyses des Eaux et des Aliments</h1>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="room-item shadow rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/service_hygiène.jpg" alt="">
-                            </div>
-                            <div class="p-4 mt-2">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <h5 class="mb-0">Service Hygiène et Environnement</h5>
-                                </div>
-                                <p class="text-body mb-3">Détection des Liégionelles dans les tours aéro-réfrégirantes
-                                    des établissements publiques.</p>
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">EN SAVOIR PLUS</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="room-item shadow rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/physico-chimie.jpg" alt="">
-                            </div>
-                            <div class="p-4 mt-2">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <h5 class="mb-0">Section Physico-chimie</h5>
-                                </div>
-                                <p class="text-body mb-3">Les services du SHEpc sont sollicités par de nombreuses
-                                    industries agroalimentaires ou non, des entreprises de traitement et/ou de
-                                    production d’eaux de consommation.</p>
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">EN SAVOIR PLUS</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="room-item shadow rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/microbiologie.jpg" alt="">
-                            </div>
-                            <div class="p-4 mt-2">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <h5 class="mb-0">Section microbiologie</h5>
-                                </div>
-                                <p class="text-body mb-3">Le Laboratoire d'Hygiène et Environnement du CPC est l'unique
-                                    laboratoire accrédité selon la norme NF EN ISO 17025 la microbiologie des eaux et
-                                    des aliments en Afrique Centrale.</p>
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">EN SAVOIR PLUS</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Room End -->
-        <!-- Room Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title text-center text-primary text-uppercase"></h6>
-                    <h1 class="mb-5">Analyses médicales</h1>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="room-item shadow rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/modalitesPratiques.png" alt="">
-                            </div>
-                            <div class="p-4 mt-2">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <h5 class="mb-0">Modalités Pratiques</h5>
-                                </div>
-                                <p class="text-body mb-3">Afin de gérer au mieux la prise en charge administrative de
-                                    votre dossier, vous serez muni de certain éléments à votre arrivée au laboratoire.
-                                </p>
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">EN SAVOIR PLUS</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="room-item shadow rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/services_express.png" alt="">
-                            </div>
-                            <div class="p-4 mt-2">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <h5 class="mb-0">Service Express</h5>
-                                </div>
-                                <p class="text-body mb-3">Vous avez besoin de faire vos analyses et vos vaccinations
-                                    sans attendre ? Demandez ou prenez rendez-vous au Secrétariat Médical du Centre
-                                    Pasteur du Cameroun.</p>
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">EN SAVOIR PLUS</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="room-item shadow rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/qualityAssurance.jpg" alt="">
-                            </div>
-                            <div class="p-4 mt-2">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <h5 class="mb-0">Assurance qualité </h5>
-                                </div>
-                                <p class="text-body mb-3">Le laboratoire d’Analyses Médicales (LAM) du CPC est arrimé au
-                                    système de management par la qualité. Il est accrédité depuis 2019 selon la norme
-                                    internationale ISO 15189.</p>
-                                <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">EN SAVOIR PLUS</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Room End -->
-
-
-        <!-- Testimonial Start -->
-        <!-- <div class="container-xxl testimonial mt-5 py-5 bg-dark wow zoomIn" data-wow-delay="0.1s"
-            style="margin-bottom: 90px;">
-            <div class="container">
-                <div class="owl-carousel testimonial-carousel py-5">
-                    <div class="testimonial-item position-relative bg-white rounded overflow-hidden">
-                        <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet
-                            diam stet. Est stet ea lorem amet est kasd kasd et erat magna eos</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg"
-                                style="width: 45px; height: 45px;">
-                            <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
-                            </div>
-                        </div>
-                        <i class="fa fa-quote-right fa-3x text-primary position-absolute end-0 bottom-0 me-4 mb-n1"></i>
-                    </div>
-                    <div class="testimonial-item position-relative bg-white rounded overflow-hidden">
-                        <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet
-                            diam stet. Est stet ea lorem amet est kasd kasd et erat magna eos</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-2.jpg"
-                                style="width: 45px; height: 45px;">
-                            <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
-                            </div>
-                        </div>
-                        <i class="fa fa-quote-right fa-3x text-primary position-absolute end-0 bottom-0 me-4 mb-n1"></i>
-                    </div>
-                    <div class="testimonial-item position-relative bg-white rounded overflow-hidden">
-                        <p>Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet
-                            diam stet. Est stet ea lorem amet est kasd kasd et erat magna eos</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-3.jpg"
-                                style="width: 45px; height: 45px;">
-                            <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
-                            </div>
-                        </div>
-                        <i class="fa fa-quote-right fa-3x text-primary position-absolute end-0 bottom-0 me-4 mb-n1"></i>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <!-- Testimonial End -->
 
 
         <!-- Newsletter Start -->
