--- a/sante.html
+++ b/sante.html
@@ -265,7 +265,7 @@
                     <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="rounded shadow overflow-hidden">
                             <div class="position-relative" style="padding: 10px;">
-                                <img class="img-fluid" src="img/Cholera.jpg" alt="">
+                                <img class="img-fluid" src="img/cholera.jpg" alt="">
                             </div>
                         </div>
                     </div>
